--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,7 +18,7 @@
 }
 
 header {
-    background-color: #2c3e50;
+    background-color: #2c3e50 transparent 50%;
     color: #ecf0f1;
     padding: 10px 20px;
     display: flex;
