--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,7 +18,7 @@
 }
 
 header {
-    background-color: #2c3e50 transparent 50%;
+    background-color: #2c3e50;
     color: #ecf0f1;
     padding: 10px 20px;
     display: flex;
@@ -40,6 +40,30 @@ header {
 h1 {
     margin: 0;
     font-size: 1.5em;
+}
+
+#search-container {
+    display: flex;
+    align-items: center;
+}
+
+#search-bar {
+  padding: 8px;
+  margin-right: 10px;
+  border: 1px solid #ecf0f1;
+  border-radius: 4px;
+  background-color: transparent; /* Set the background color to transparent */
+  color: #ecf0f1; /* Set the text color */
+  outline: none; /* Remove the input focus outline */
+}
+
+#search-button {
+    background-color: #3498db;
+    color: #ecf0f1;
+    border: none;
+    padding: 8px 12px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 nav {
@@ -77,6 +101,7 @@ nav a:hover {
     border-radius: 50%;
     padding: 4px 8px;
 }
+
 
 
 
