--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -19,7 +19,7 @@
 
 header {
     background-color: #2c3e50;
-    color: #ecf0f1;
+    color: #ecf0f127;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
