--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,7 +18,7 @@
 }
 
 header {
-    background-color: #2c3e50;
+    background-color: transparent;
     color: #ecf0f127;
     padding: 10px 20px;
     display: flex;
@@ -52,9 +52,6 @@ h1 {
   margin-right: 10px;
   border: 1px solid #ecf0f1;
   border-radius: 4px;
-  background-color: transparent; /* Set the background color to transparent */
-  color: #ecf0f1; /* Set the text color */
-  outline: none; /* Remove the input focus outline */
 }
 
 #search-button {
