--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -15,10 +15,11 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: var(--color1);
 }
 
 header {
-    background-color: transparent 50%;
+    background-color: transparent;
     color: #ecf0f100;
     padding: 10px 20px;
     display: flex;
