--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -94,7 +94,7 @@ nav a:hover {
     position: absolute;
     top: -8px;
     right: -8px;
-    background-color: #e74c3c;
+    background-color: #ccfe06;
     color: #fff;
     font-size: 12px;
     border-radius: 50%;
