--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -58,6 +58,7 @@ h1 {
 
 #search-button {
     background-color: #000000;
+    outline: #ecf0f1;
     color: #ecf0f1;
     border: none;
     padding: 8px 12px;
