--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,6 +17,10 @@
     padding: 0;
     background-color: #000000;
     color: #eceff1;
+    background-image: url('Images/index-page-bg.jpg'); /* Set the path to your background image */
+    background-size: cover; /* Cover the entire viewport */
+    background-position: center; /* Center the background image */
+    background-repeat: no-repeat; /* Do not repeat the background image */
 }
 
 header {
