--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -110,6 +110,40 @@ nav a:hover {
 
 
 
+
+
+/* Code below is for the Footer */
+
+footer {
+  background-color: #ccfe06;
+  color: #333;
+  padding: 20px 0;
+}
+
+.footer-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+}
+
+.footer-links {
+  display: flex;
+}
+
+.footer-links a {
+  color: #333;
+  text-decoration: none;
+  margin: 0 15px;
+  font-weight: bold;
+}
+
+.footer-links a:hover {
+  color: #3498db;
+}
+
+
+
   /* Example usage 
   body {
     background-color: var(--color1);
