--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -139,3 +139,41 @@ input[type="submit"] {
     border: none;
     border-radius: 4px;
 }
+
+
+
+
+
+
+
+
+
+/* Code below is for the Footer */
+
+footer {
+    background-color: #ccfe06;
+    color: #333;
+    padding: 20px 0;
+  }
+  
+  .footer-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+  }
+  
+  .footer-links {
+    display: flex;
+  }
+  
+  .footer-links a {
+    color: #333;
+    text-decoration: none;
+    margin: 0 15px;
+    font-weight: bold;
+  }
+  
+  .footer-links a:hover {
+    color: #ecf0f1;
+  }
