fixing footer bug

--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -154,6 +154,7 @@ footer {
     background-color: #ccfe06;
     color: #333;
     padding: 20px 0;
+    margin-top: auto;
   }
   
   .footer-container {
