--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -132,8 +132,8 @@ textarea {
 }
 
 input[type="submit"] {
-    background-color: #3498db;
-    color: #fff;
+    background-color: #ccfe06;
+    color: #000000;
     cursor: pointer;
     padding: 10px;
     border: none;
@@ -153,7 +153,7 @@ input[type="submit"] {
 footer {
     background-color: #ccfe06;
     color: #333;
-    padding: 20px 0;
+    padding: 20px 20px;
     margin-top: auto;
   }
   
