--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -109,6 +109,7 @@ nav a:hover {
     max-width: 600px;
     margin: 50px auto;
     background-color: #fff;
+    color: #000000;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
