--- a/CSS/index.css
+++ b/CSS/index.css
@@ -117,7 +117,7 @@ nav a:hover {
     margin: 50px;
 }
 
-.index-image {
+#index-image {
     max-width: 100%;
     height: auto;
     display: block;
