--- a/CSS/index.css
+++ b/CSS/index.css
@@ -113,8 +113,9 @@ nav a:hover {
 /*  Index page Image  */
 
 .index-image-container {
-    max-width: calc(70% - 75px); /* 100% width minus 50px from each side */
+    max-width: calc(100% - 25px); /* 100% width minus 50px from each side */
     margin: 50px;
+    height: 400px;
 }
 
 #index-image {
