--- a/CSS/index.css
+++ b/CSS/index.css
@@ -115,7 +115,7 @@ nav a:hover {
 .index-image-container {
     max-width: calc(100% - 25px); /* 100% width minus 50px from each side */
     margin: 50px;
-    height: 400px;
+    /*height: 400px;*/
 }
 
 #index-image {
