fixing text colour on login.css login-container

--- a/CSS/login.css
+++ b/CSS/login.css
@@ -121,6 +121,7 @@ header {
     border-radius: 8px;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    color: #000000;
 }
 
 form {
