--- a/CSS/login.css
+++ b/CSS/login.css
@@ -124,10 +124,31 @@ header {
     color: #000000;
 }
 
-form {
-    display: grid;
-    gap: 15px;
-}
+    form {
+        display: grid;
+        gap: 15px;
+    }
+
+    label {
+        font-weight: bold;
+    }
+
+    input,
+    textarea {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+    }
+
+    input[type="submit"] {
+        background-color: #ccfe06;
+        color: #000000;
+        cursor: pointer;
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+    }
 
 
 
