--- a/CSS/login.css
+++ b/CSS/login.css
@@ -9,7 +9,7 @@
   }
   
 
-  /* Codeb below is for new nav bar prototype */
+  /* Code below is for new nav bar prototype */
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -120,7 +120,7 @@ header {
     border: 1px solid #ccc;
     border-radius: 8px;
     background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px #c2ee0a;
     color: #000000;
 }
 
