--- a/CSS/login.css
+++ b/CSS/login.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
     background-color: #000000;
     justify-content: center;
     align-items: center;
