--- a/CSS/index.css
+++ b/CSS/index.css
@@ -111,18 +111,27 @@ body {
 
 /* View Products Button */
 
-.ProductsBtn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    padding: 10px 20px;
-    font-size: 16px;
-    background-color: #ccfe06;
-    color: #000000;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.products-button-container {
+    position: relative;
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+    .ProductsBtn {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #ccfe06;
+        color: #000000;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
 
 
 
