--- a/CSS/login.css
+++ b/CSS/login.css
@@ -148,6 +148,26 @@ nav a:hover {
         border-radius: 4px;
     }
 
+
+
+
+
+/* styles for the Login pop-up */
+.popup-container {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 20px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+}
+
+
+
+
 /* Code below is for the Footer */
 
 footer {
