--- a/CSS/logout.css
+++ b/CSS/logout.css
@@ -14,6 +14,8 @@ body {
     padding: 0;
     background-color: var(--color1); /* Black */
     color: var(--color4); /* White 1 */
+    align-items: center;
+    justify-content: center;
 }
 
 header {
