--- a/CSS/about.css
+++ b/CSS/about.css
@@ -39,6 +39,7 @@ h2 {
     font-size: 1.2em;
     text-align: center;
     padding-bottom: 2%;
+    padding-top: 2%;
 }
 
 .left {
@@ -59,4 +60,5 @@ div {
 
 p {
     margin: 0;
+    padding-bottom: 1%;
 }
