--- a/CSS/reviews.css
+++ b/CSS/reviews.css
@@ -116,7 +116,7 @@ body {
     max-width: 800px;
     margin: 20px auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #413e3e;
     box-shadow: 0 0 10px var(--color3);
     border-radius: 8px;
 }
