--- a/CSS/login.css
+++ b/CSS/login.css
@@ -6,6 +6,10 @@
     --color3: #ccfe06; /* Yellow 2 */
     --color4: #eceff1; /* White 1 */
     --color5: #ffffff; /* White 2 */
+    --formcolor: #aaaaaa;
+    --font1: 'Anton', sans-serif;
+    --font2: 'HK Grotesk', sans-serif;
+    
 }
 
 /* Code below is for new nav bar prototype */
@@ -111,15 +115,33 @@ nav a:hover {
 }
 
     .login-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        align-content: center;
         max-width: 500px;
         width: 100%;
         padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 8px;
-        background-color: #fff;
-        box-shadow: 0 0 10px #c2ee0a;
+        border: none;
+        background-color: var(--formcolor);
+        /*box-shadow: 0 0 10px #c2ee0a;*/
         color: #000000;
         margin-bottom: 100px;
+        text-transform: uppercase;
+    }
+
+    .login-container h2 {
+        font-weight: 700;
+        font-style: italic;
+        font-family: var(--font1);
+        letter-spacing: 0em;
+        align-items: center;
+    }
+
+    ::placeholder{
+        color: #000000;
+        font-family: var(--font2);
+
     }
 
     form {
@@ -138,14 +160,34 @@ nav a:hover {
         border: 1px solid #ccc;
         border-radius: 4px;
     }
+    .login-container input{
+        background-color: var(--color3);
+        color: #000000;
+        text-align: center;
+        border: none;
+        font-family: var(--font2);
+        font-weight: 700;
+    }
 
     input[type="submit"] {
-        background-color: var(--color3); /* Use the yellow 2 color from the palette */
-        color: var(--color1); /* Use the black color from the palette */
+        background-color: #000000; /* Use the yellow 2 color from the palette */
+        color: var(--color3); /* Use the black color from the palette */
         cursor: pointer;
         padding: 10px;
         border: none;
         border-radius: 4px;
+        font-weight: 700;
+        
+    }
+    
+    button {
+        background-color: #000000; /* Use the yellow 2 color from the palette */
+        color: var(--color3); /* Use the black color from the palette */
+        cursor: pointer;
+        padding: 10px;
+        border: none;
+        border-radius: 4px;
+        font-weight: 700;
     }
 
 
