--- a/CSS/about.css
+++ b/CSS/about.css
@@ -8,6 +8,9 @@
     --color3: #ccfe06; /* Yellow 2 */
     --color4: #eceff1; /* White 1 */
     --color5: #ffffff; /* White 2 */
+    --formcolor: #aaaaaa;
+    --font1: 'Anton', sans-serif;
+    --font2: 'HK Grotesk', sans-serif;
 }
 
 body {
@@ -27,31 +30,68 @@ header {
     align-items: center;
 }
 
-h1 {
+.content-container h1 {
     margin: 0;
     font-size: 1.5em;
     text-align: center;
     padding-bottom: 5%;
+    font-family: var(--font1);
+    font-weight: 700;
+    text-transform: uppercase;
 }
 
-h2 {
-    margin: 0;
-    font-size: 1.2em;
-    text-align: center;
-    padding-bottom: 2%;
-    padding-top: 2%;
+.about-container{
+    width: 100%;
 }
 
-.left {
-    padding-right: 50%;
-    background: linear-gradient(90deg, var(--color2) 50%, var(--color1) 50%);
+.about-container h1{
+    padding: 3%;
+    font-style: italic;
+    background: var(--color3);
+    background-size: 100vw 10vh;
     color: var(--color1);
 }
 
-.right {
-    padding-left: 50%;
-    background: linear-gradient(90deg, var(--color1) 50%, var(--color4) 50%);
-    color: var(--color1);
+.about-content h1{
+    padding-top: 5%;
+    font-size: large;
+}
+
+.content-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 5%;
+}
+
+.about-content {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: start;
+    
+    
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5%;
+}
+
+.content img {
+    width: 25vw;
+    height: auto;
+    aspect-ratio: 8/5;
+}
+
+.content p{
+    font-family: var(--font2);
+    font-weight: 400;
+    font-size: medium;
+    font-style: oblique;
 }
 
 div {
