--- a/CSS/productsDisplay.css
+++ b/CSS/productsDisplay.css
@@ -22,13 +22,84 @@ body {
 
 header {
     background-color: transparent;
-    color: var(--color2); /* Yellow 1 */
+    color: #ecf0f100;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+        #logo-container {
+            display: flex;
+            align-items: center;
+            color: #ecf0f1;
+        }
+            #logo {
+                max-width: 60px;
+                max-height: 60px;
+                margin-right: 10px;
+            }
+
+
+        h1 {
+            margin: 0;
+            font-size: 1.5em;
+        }
+        
+
+        #search-container {
+            display: flex;
+            align-items: center;
+        }
+            #search-bar {
+            padding: 8px;
+            margin-right: 10px;
+            border: 1px solid #ecf0f1;
+            border-radius: 4px;
+            }
+            #search-button {
+                background-color: #ecf0f1;
+                outline: #ecf0f1;
+                color: #000000;
+                border: none;
+                padding: 8px 12px;
+                border-radius: 4px;
+                cursor: pointer;
+            }
+
+
+    nav {
+        display: flex;
+    }
+        nav a {
+            color: #ecf0f1;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: bold;
+            transition: color 0.3s ease-in-out;
+        }
+        nav a:hover {
+            color: #ccfe06;
+        }
+
+
+    #cart-container {
+        position: relative;
+    }
+        #cart-icon {
+            max-width: 30px;
+            cursor: pointer;
+        }
+        #cart-count {
+            position: absolute;
+            top: -8px;
+            right: -8px;
+            background-color: #ccfe06;
+            color: #000000;
+            font-size: 12px;
+            border-radius: 50%;
+            padding: 4px 8px;
+        }
 
 
 
