Update CSS styles and add link to styles.css in login, cart, index, contact, reviews, products, logout, privacy-policy, signup, and about pages. also fixed all the css files as the footer, header, and variables where coppied into all the css files when they should only be in styles.css

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,9 @@
     --color3: #ccfe06; /* Yellow 2 */
     --color4: #eceff1; /* White 1 */
     --color5: #ffffff; /* White 2 */
+    --formcolor: #aaaaaa;
+    --font1: 'Anton', sans-serif;
+    --font2: 'HK Grotesk', sans-serif;
   }
   
 
