variable issue with sign up form

--- a/CSS/signup.css
+++ b/CSS/signup.css
@@ -16,7 +16,7 @@
         width: 100%;
         padding: 20px;
         border: none;
-        background-color: var(--formcolor);
+        background-color: #aaaaaa;
         color: #000000;
         margin-bottom: 100px;
         text-transform: uppercase;
