--- a/CSS/login.css
+++ b/CSS/login.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 81vh;
 }
 
 .login-container {
