--- a/CSS/products.css
+++ b/CSS/products.css
@@ -3,18 +3,22 @@
 /* Container for products */
 .product-container {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: flex;
     justify-content: space-around;
+    align-items: center;
     margin: 20px;
 }
 
 /* Individual product styling */
 .product {
-    width: 300px;
-    margin: 20px;
+     width: 300px;
+    margin: 10px 20px;
     padding: 10px;
     border: 1px solid #ddd;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Center content horizontally */
 }
 
 .product img {
@@ -33,10 +37,17 @@
     color: #555; /* Adjust color as needed */
 }
 
+.price {
+    font-size: 1.5em; /* larger font for price */
+    margin: 10px 20px;
+    
+}
+
+
 /* Add to cart button styling */
 .add-to-cart  {
-    background-color: --color2;
-    border: 1px solid --color2;
+    background-color: var(--color2);
+    border: 1px solid var(--color2);
     border-radius: 4px;
     box-shadow: rgba(0, 0, 0, .1) 0 2px 4px 0;
     box-sizing: border-box;
@@ -74,7 +85,7 @@
     border: 0;
     height: 1px;
     background: #ddd;
-    margin: 15px 0;
+    margin: 5px 0;
 }
 
 /* Responsive adjustments */
@@ -87,7 +98,15 @@
 /* Code beloq is for styliing the product containers*/
 .product-container a {
     text-decoration: none;
-    /*color: inherit; /* This ensures the color of the links is consistent with your text color */
+    color: inherit; /* This ensures the color of the links is consistent with your text color */
+}
+
+/*styling the description separate to the other details*/
+.product-descripton a 
+{
+    text-decoration: none;
+    color: inherit; /* This ensures the color of the links is consistent with your text color */
+    
 }
 
 .product-container a:hover {
