--- a/CSS/products.css
+++ b/CSS/products.css
@@ -15,6 +15,7 @@
     padding: 10px;
     border: 1px solid #ddd;
     text-align: center;
+    grid-column: span 3;
    
 }
 
@@ -38,6 +39,13 @@
     align-items: center;
 }
 
+.add-to-cart-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    grid-column: 4;
+}
 .price {
     font-size: 1.5em; /* larger font for price */
     margin: 10px 0;
@@ -95,8 +103,10 @@
 
 /* Quantity input styling */
 .quantity {
-    padding-top: 20px;
-    margin-right: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 10px;
   }
   .quantity input {
     border: none;
@@ -141,6 +151,7 @@
 @media screen and (max-width: 600px) {
     .product {
         width: 100%;
+        grid-column: span 4;
     }
 }
 
