--- a/CSS/productsDisplay.css
+++ b/CSS/productsDisplay.css
@@ -57,10 +57,10 @@
 }
 
 .product-image {
-    width: auto;
-    height: 40vh;
-    display: block;
-    margin: 0 auto 20px;
+    width: 100%;
+    height: 200px; /* Set a fixed height */
+    object-fit: contain; /* 'contain'to see the whole image without cropping */
+    margin-bottom: 10px;
 }
 
 .quantity-input {
