minor adjustments to css

--- a/CSS/productsDisplay.css
+++ b/CSS/productsDisplay.css
@@ -84,8 +84,8 @@
 }
 
 .add-to-cart-btn {
-    background-color: #007bff;
-    color: white;
+    background-color: #c2ee0a;
+    color: black;
     padding: 10px 15px;
     border: none;
     cursor: pointer;
