--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -124,7 +124,7 @@ footer {
   background-color: #ccfe06;
   color: #333;
   padding: 20px 0;
-  margin: none;
+  margin: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
